fixes  #1712 - added spacing to assets page.

--- a/app/stylesheets/ui_base/_base.sass
+++ b/app/stylesheets/ui_base/_base.sass
@@ -845,7 +845,7 @@ table
     h2
       +partial-width
       clear: both
-      padding-bottom: 5px
+      padding-bottom: 8px
 
 /* footer */
 
