--- a/app/stylesheets/ui_base/_page.sass
+++ b/app/stylesheets/ui_base/_page.sass
@@ -142,3 +142,14 @@ div.title_box
 div.sub_menu
   width: 200px
 
+
+// 
+// ASSETS PAGE
+//
+#asset_page
+  .upload_file_info
+    padding: 15px 0
+    a
+      +hover-link
+  table.pretty 
+    float: none
